Fri Aug 29 18:53:50 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (real_main): "move" initialisating of szTerminalCharset
	and localisation stuff outside #if USE_GUI.
	(reported by Nardy Pillards)

Fri Aug 29 17:23:55 2003  Joern Thyssen  <jth@gnubg.org>

	* analysis.c (Luck, Skill): modify inequalities.
	(bug reported by Michael Depreli, fix contributed by Nis Joergensen)

Fri Aug 29 13:58:55 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* autogen.sh: touch board3d/Makefile.in and textures/Makefile.in.
	* credits.sh, credits.c, AUTHORS: Fix my name and refresh.

Fri Aut 30 12:31:43 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* fixes for graph functions
	* gtkgame.c  include gtktext.h, fix trailing ';' on #endif
	* board3d Makefile.am - add graph.c to sources
	* graph.c - include config.h and some gl includes
	* inc3d.h - add glconfig as global, make idempotent
	* shadow.h - make idempotent
	* widget3d.c - include config.h
	
Thu Aug 29 10:39:52 2003  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c - display statistics in a graph
	* graph.c - new file to draw a graph

Thu Aug 28 19:23:52 2003  Joern Thyssen  <jth@gnubg.org>

	* analysis (absoluteFIBSRating): use new formulae provided by Kees.

Wed Aug 27 21:51:22 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* gnubg.c - fix careless cut&paste for language setting

Wed Aug 27 17:43:38 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* gtkgame.c - fix rollout settings problems - onesidedbearoff
          truncation and negative values for rollout seed

Wed Aug 27 17:43:38 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* rollout.c - fix bug causing it to stop to soon in CommandRollout

Wed Aug 27 18:19:44 2003 Oystein Johansen <oystein@gnubg.org>

	* gtkgame.c (NewWidget): Fix bug that the shortcut buttons react on
	the player settings.


Wed Aug 27 14:04:44 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* gnubg.c - make szLang writeable, ensure LANG env setting
	  is not a local variable
