@@ -18,10 +18,10 @@
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 *
-* $Id: mylist.c,v 1.2 2003/08/13 11:52:29 Superfly_Jon Exp $
+* $Id: mylist.c,v 1.3 2003/08/29 18:38:12 jsegrave Exp $
 */
 
-#include <malloc.h>
+#include <stdlib.h>
 #include <memory.h>
 #include "mylist.h"
 
